--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,7 @@ body {
   --CB: "CB", sans-serif;
   --MR: "MR", sans-serif;
   --MB: "MB", sans-serif;
-  --RR: "CR", sans-serif;
+  --RR: "RR", sans-serif;
   --RM: "RM", sans-serif;
   --white: #fff;
   --black: #000;
